apollo-router/tests/snapshots/set_context__set_context_list_of_lists.snap
---
source: apollo-router/tests/set_context.rs
expression: response
snapshot_kind: text
---
{
  "data": {
    "tList": [
      {
        "id": "1",
        "uList": [
          {
            "field": 3456
          }
        ]
      },
      {
        "id": "2",
        "uList": [
          {
            "field": 4567
          }
        ]
      }
    ]
  },
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "authorization": {
                "is_authenticated": false,
                "policies": [],
                "scopes": []
              },
              "contextRewrites": null,
              "id": null,
              "inputRewrites": null,
              "kind": "Fetch",
              "operation": "query QueryLL__Subgraph1__0{tList{__typename prop id uList{__typename id}}}",
              "operationKind": "query",
              "operationName": "QueryLL__Subgraph1__0",
              "outputRewrites": null,
              "schemaAwareHash": "832edda219316a26f9aada0255a90aaba20304abd2f5a3e8e7889e50b5f3fb5f",
              "serviceName": "Subgraph1",
              "variableUsages": []
            },
            {
              "kind": "Flatten",
              "node": {
                "authorization": {
                  "is_authenticated": false,
                  "policies": [],
                  "scopes": []
                },
                "contextRewrites": [
                  {
                    "kind": "KeyRenamer",
                    "path": [
                      "..",
                      "... on T",
                      "prop"
                    ],
                    "renameKeyTo": "contextualArgument_1_0"
                  }
                ],
                "id": null,
                "inputRewrites": null,
                "kind": "Fetch",
                "operation": "query QueryLL__Subgraph1__1($representations:[_Any!]!$contextualArgument_1_0:String){_entities(representations:$representations){...on U{field(a:$contextualArgument_1_0)}}}",
                "operationKind": "query",
                "operationName": "QueryLL__Subgraph1__1",
                "outputRewrites": null,
                "requires": [
                  {
                    "kind": "InlineFragment",
                    "selections": [
                      {
                        "kind": "Field",
                        "name": "__typename"
                      },
                      {
                        "kind": "Field",
                        "name": "id"
                      }
                    ],
                    "typeCondition": "U"
                  }
                ],
                "schemaAwareHash": "aa65888282aa780d446889c5aa43c640af03109e1ed45ee5d1b5d3a39adc5253",
                "serviceName": "Subgraph1",
                "variableUsages": [
                  "contextualArgument_1_0"
                ]
              },
              "path": [
                "",
                "tList",
                "@",
                "uList",
                "@"
              ]
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        tList {\n          __typename\n          prop\n          id\n          uList {\n            __typename\n            id\n          }\n        }\n      }\n    },\n    Flatten(path: \".tList.@.uList.@\") {\n      Fetch(service: \"Subgraph1\") {\n        {\n          ... on U {\n            __typename\n            id\n          }\n        } =>\n        {\n          ... on U {\n            field(a: $contextualArgument_1_0)\n          }\n        }\n      },\n    },\n  },\n}"
    }
  }
}
