apollo-router/tests/snapshots/set_context__set_context_union.snap
---
source: apollo-router/tests/set_context.rs
expression: response
snapshot_kind: text
---
{
  "data": {
    "k": {
      "v": {
        "field": 3456
      }
    }
  },
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "authorization": {
                "is_authenticated": false,
                "policies": [],
                "scopes": []
              },
              "contextRewrites": null,
              "id": null,
              "inputRewrites": null,
              "kind": "Fetch",
              "operation": "query QueryUnion__Subgraph1__0{k{__typename ...on A{__typename prop v{__typename id}}...on B{__typename prop v{__typename id}}}}",
              "operationKind": "query",
              "operationName": "QueryUnion__Subgraph1__0",
              "outputRewrites": null,
              "schemaAwareHash": "28832c37359f453e10eba582489c8804e37259da3360561e6001a90794c76e09",
              "serviceName": "Subgraph1",
              "variableUsages": []
            },
            {
              "kind": "Parallel",
              "nodes": [
                {
                  "kind": "Flatten",
                  "node": {
                    "authorization": {
                      "is_authenticated": false,
                      "policies": [],
                      "scopes": []
                    },
                    "contextRewrites": [
                      {
                        "kind": "KeyRenamer",
                        "path": [
                          "..",
                          "... on A",
                          "prop"
                        ],
                        "renameKeyTo": "contextualArgument_1_1"
                      }
                    ],
                    "id": null,
                    "inputRewrites": null,
                    "kind": "Fetch",
                    "operation": "query QueryUnion__Subgraph1__1($representations:[_Any!]!$contextualArgument_1_1:String){_entities(representations:$representations){...on V{field(a:$contextualArgument_1_1)}}}",
                    "operationKind": "query",
                    "operationName": "QueryUnion__Subgraph1__1",
                    "outputRewrites": null,
                    "requires": [
                      {
                        "kind": "InlineFragment",
                        "selections": [
                          {
                            "kind": "Field",
                            "name": "__typename"
                          },
                          {
                            "kind": "Field",
                            "name": "id"
                          }
                        ],
                        "typeCondition": "V"
                      }
                    ],
                    "schemaAwareHash": "30ac2f41c830481c78ded59222c0660a17cf960aba864a972ffe6075797c291d",
                    "serviceName": "Subgraph1",
                    "variableUsages": [
                      "contextualArgument_1_1"
                    ]
                  },
                  "path": [
                    "",
                    "k|[A]",
                    "v"
                  ]
                },
                {
                  "kind": "Flatten",
                  "node": {
                    "authorization": {
                      "is_authenticated": false,
                      "policies": [],
                      "scopes": []
                    },
                    "contextRewrites": [
                      {
                        "kind": "KeyRenamer",
                        "path": [
                          "..",
                          "... on B",
                          "prop"
                        ],
                        "renameKeyTo": "contextualArgument_1_1"
                      }
                    ],
                    "id": null,
                    "inputRewrites": null,
                    "kind": "Fetch",
                    "operation": "query QueryUnion__Subgraph1__2($representations:[_Any!]!$contextualArgument_1_1:String){_entities(representations:$representations){...on V{field(a:$contextualArgument_1_1)}}}",
                    "operationKind": "query",
                    "operationName": "QueryUnion__Subgraph1__2",
                    "outputRewrites": null,
                    "requires": [
                      {
                        "kind": "InlineFragment",
                        "selections": [
                          {
                            "kind": "Field",
                            "name": "__typename"
                          },
                          {
                            "kind": "Field",
                            "name": "id"
                          }
                        ],
                        "typeCondition": "V"
                      }
                    ],
                    "schemaAwareHash": "382811377545b242e2c43d61501a2de89f72f3ffa878fb5dc5692649917d0829",
                    "serviceName": "Subgraph1",
                    "variableUsages": [
                      "contextualArgument_1_1"
                    ]
                  },
                  "path": [
                    "",
                    "k|[B]",
                    "v"
                  ]
                }
              ]
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        k {\n          __typename\n          ... on A {\n            __typename\n            prop\n            v {\n              __typename\n              id\n            }\n          }\n          ... on B {\n            __typename\n            prop\n            v {\n              __typename\n              id\n            }\n          }\n        }\n      }\n    },\n    Parallel {\n      Flatten(path: \".k|[A].v\") {\n        Fetch(service: \"Subgraph1\") {\n          {\n            ... on V {\n              __typename\n              id\n            }\n          } =>\n          {\n            ... on V {\n              field(a: $contextualArgument_1_1)\n            }\n          }\n        },\n      },\n      Flatten(path: \".k|[B].v\") {\n        Fetch(service: \"Subgraph1\") {\n          {\n            ... on V {\n              __typename\n              id\n            }\n          } =>\n          {\n            ... on V {\n              field(a: $contextualArgument_1_1)\n            }\n          }\n        },\n      },\n    },\n  },\n}"
    }
  }
}
