apollo-router/tests/snapshots/set_context__set_context_with_null.snap
---
source: apollo-router/tests/set_context.rs
expression: response
snapshot_kind: text
---
{
  "data": {
    "t": {
      "id": "1",
      "u": {
        "field": 1234
      }
    }
  },
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "kind": "Fetch",
              "serviceName": "Subgraph1",
              "variableUsages": [],
              "operation": "query Query_Null_Param__Subgraph1__0{t{__typename prop id u{__typename id}}}",
              "operationName": "Query_Null_Param__Subgraph1__0",
              "operationKind": "query",
              "id": null,
              "inputRewrites": null,
              "outputRewrites": null,
              "contextRewrites": null,
              "schemaAwareHash": "e6208acfdfd0841365a3b63a8fcff118daf4ebdffce940c1e951abe6f0e551c4",
              "authorization": {
                "is_authenticated": false,
                "scopes": [],
                "policies": []
              }
            },
            {
              "kind": "Flatten",
              "path": [
                "",
                "t",
                "u"
              ],
              "node": {
                "kind": "Fetch",
                "serviceName": "Subgraph1",
                "requires": [
                  {
                    "kind": "InlineFragment",
                    "typeCondition": "U",
                    "selections": [
                      {
                        "kind": "Field",
                        "name": "__typename"
                      },
                      {
                        "kind": "Field",
                        "name": "id"
                      }
                    ]
                  }
                ],
                "variableUsages": [
                  "contextualArgument_1_0"
                ],
                "operation": "query Query_Null_Param__Subgraph1__1($representations:[_Any!]!$contextualArgument_1_0:String){_entities(representations:$representations){...on U{field(a:$contextualArgument_1_0)}}}",
                "operationName": "Query_Null_Param__Subgraph1__1",
                "operationKind": "query",
                "id": null,
                "inputRewrites": null,
                "outputRewrites": null,
                "contextRewrites": [
                  {
                    "kind": "KeyRenamer",
                    "path": [
                      "..",
                      "... on T",
                      "prop"
                    ],
                    "renameKeyTo": "contextualArgument_1_0"
                  }
                ],
                "schemaAwareHash": "42e5f12379b7136efe99706e8569cf56618742fbf4cef43fa44347e441b6a04d",
                "authorization": {
                  "is_authenticated": false,
                  "scopes": [],
                  "policies": []
                }
              }
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        t {\n          __typename\n          prop\n          id\n          u {\n            __typename\n            id\n          }\n        }\n      }\n    },\n    Flatten(path: \".t.u\") {\n      Fetch(service: \"Subgraph1\") {\n        {\n          ... on U {\n            __typename\n            id\n          }\n        } =>\n        {\n          ... on U {\n            field(a: $contextualArgument_1_0)\n          }\n        }\n      },\n    },\n  },\n}"
    }
  }
}
