apollo-router/tests/snapshots/set_context__set_context_with_null_rust_qp.snap
---
source: apollo-router/tests/set_context.rs
expression: response
---
{
  "data": {
    "t": {
      "id": "1",
      "u": {
        "field": 1234
      }
    }
  },
  "extensions": {
    "apolloQueryPlan": {
      "object": {
        "kind": "QueryPlan",
        "node": {
          "kind": "Sequence",
          "nodes": [
            {
              "kind": "Fetch",
              "serviceName": "Subgraph1",
              "variableUsages": [],
              "operation": "query Query_Null_Param__Subgraph1__0 { t { id u { __typename id } prop } }",
              "operationName": "Query_Null_Param__Subgraph1__0",
              "operationKind": "query",
              "id": null,
              "inputRewrites": null,
              "outputRewrites": null,
              "contextRewrites": null,
              "schemaAwareHash": "c42b1302850463be322af88689db200aef20cbdae2131b7c7989260f13d0f08f",
              "authorization": {
                "is_authenticated": false,
                "scopes": [],
                "policies": []
              }
            },
            {
              "kind": "Flatten",
              "path": [
                "t",
                "u"
              ],
              "node": {
                "kind": "Fetch",
                "serviceName": "Subgraph1",
                "requires": [
                  {
                    "kind": "InlineFragment",
                    "typeCondition": "U",
                    "selections": [
                      {
                        "kind": "Field",
                        "name": "__typename"
                      },
                      {
                        "kind": "Field",
                        "name": "id"
                      }
                    ]
                  }
                ],
                "variableUsages": [
                  "contextualArgument_1_0"
                ],
                "operation": "query Query_Null_Param__Subgraph1__1($representations: [_Any!]!, $contextualArgument_1_0: String) { _entities(representations: $representations) { ... on U { field(a: $contextualArgument_1_0) } } }",
                "operationName": "Query_Null_Param__Subgraph1__1",
                "operationKind": "query",
                "id": null,
                "inputRewrites": null,
                "outputRewrites": null,
                "contextRewrites": [
                  {
                    "kind": "KeyRenamer",
                    "path": [
                      "..",
                      "... on T",
                      "prop"
                    ],
                    "renameKeyTo": "contextualArgument_1_0"
                  }
                ],
                "schemaAwareHash": "4ff62f66ebb6514078be6f82300a442269cc980a0630a9b07d078a38d1195f91",
                "authorization": {
                  "is_authenticated": false,
                  "scopes": [],
                  "policies": []
                }
              }
            }
          ]
        }
      },
      "text": "QueryPlan {\n  Sequence {\n    Fetch(service: \"Subgraph1\") {\n      {\n        t {\n          id\n          u {\n            __typename\n            id\n          }\n          prop\n        }\n      }\n    },\n    Flatten(path: \"t.u\") {\n      Fetch(service: \"Subgraph1\") {\n        {\n          ... on U {\n            __typename\n            id\n          }\n        } =>\n        {\n          ... on U {\n            field(a: $contextualArgument_1_0)\n          }\n        }\n      },\n    },\n  },\n}"
    }
  }
}
